[package]
name = "fiz_projekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nokhwa = { version = "0.10.4", features = ["input-native"] }
eframe = "0.24.1"
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
egui_plot = "0.24.1"
image = "0.24.7"
rand = "0.8.5"

[profile.dev]
opt-level = 3